add: get tendency handlers
