# internal/delivery/handlers/matrix.go
@@ -129,30 +129,26 @@ func (m MatrixHandler) GetDifference(c *gin.Context) {
 // @Produce  json
 // @Param data body models.GetTendencyNode true "Get data"
 // @Success 200 {object} []models.ResponseTendencyNode "Found prices in time span and one before it"
-// @Failure 400 {object} map[string]string "Invalid input, missing matrix names"
+// @Failure 400 {object} map[string]string "Invalid input"
 // @Failure 500 {object} map[string]string "Internal server error"
-// @Router /matrix/get_difference [get]
+// @Router /matrix/get_tendency [put]
 func (m MatrixHandler) GetTendency(c *gin.Context) {
+	var data models.GetTendencyNode
+
 	ctx, span := m.tracer.Start(c.Request.Context(), GetHistory)
 	defer span.End()
 
-	matrixName1, ok := c.GetQuery("from_name")
-	if !ok {
-		c.JSON(http.StatusBadRequest, gin.H{"error": "matrixName1 not provided"})
-		return
-	}
-	matrixName2, ok := c.GetQuery("to_name")
-	if !ok {
-		c.JSON(http.StatusBadRequest, gin.H{"error": "matrixName2 not provided"})
+	if err := c.ShouldBindJSON(&data); err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
 		return
 	}
 
 	span.AddEvent(CallToService)
-	matrices, err := m.service.GetDifference(ctx, matrixName1, matrixName2)
+	tendency, err := m.service.GetTendency(ctx, data)
 	if err != nil {
 		c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
 		return
 	}
 
-	c.JSON(http.StatusOK, matrices)
+	c.JSON(http.StatusOK, tendency)
 }
